--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -4,8 +4,8 @@
 
 :root {
   --color-text: #666;
-  --color-high-text: #ff5777;
-  --color-tint: #ff8198;
+  --color-high-text: #409EFF;
+  --color-tint: #409EFF;
   --color-backgroud: #fff;
   --font-size: 14px;
   --line-height: 14px;
