--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -73,9 +73,9 @@ a:hover {
 }
 
 //表格栏样式
-.table-container {
-  margin-top: 20px;
-}
+// .table-container {
+//   margin-top: 20px;
+// }
 
 //批量操作栏样式
 .batch-operate-container {
